--- a/aula-07/exercicios/exercicio-2/exercicio-2.html
+++ b/aula-07/exercicios/exercicio-2/exercicio-2.html
@@ -65,21 +65,21 @@ será insuficiente para sacar o valor e qual é este saldo. Veja o exemplo abaix
                 <div class="form-group">
                     <div class="form-group col-md-5">
                         <label>Saldo</label>
-                        <input type="text" step="0.01" name="saldo" id="id_saldo" class="money form-control" required autofocus></input>
+                        <input type="number" step="0.01" name="saldo" id="id_saldo" class="money form-control" required autofocus></input>
                     </div>
                     <div class="clearfix"></div>
                 </div>
                 <div class="form-group">
                     <div class="form-group col-md-5">
                         <label>Porcentagem de Juros</label>
-                        <input type="text" step="0.01" name="juro" id="id_juro" class="money form-control" required></input>
+                        <input type="number" step="0.01" name="juro" id="id_juro" class="money form-control" required></input>
                     </div>
                     <div class="clearfix"></div>
                 </div>
                 <div class="form-group">
                     <div class="form-group col-md-5">
                         <label>Retirada mensal</label>
-                        <input type="text" step="0.01" name="saque" id="id_saque" class="money form-control" required></input>
+                        <input type="number" step="0.01" name="saque" id="id_saque" class="money form-control" required></input>
                     </div>
                     <div class="clearfix"></div>
                 </div>
