--- a/aula-07/exercicios/exercicio-1/exercicio-1.html
+++ b/aula-07/exercicios/exercicio-1/exercicio-1.html
@@ -3,67 +3,94 @@
     <head>
         <meta charset="utf-8">
         <title>Exercício 01</title>
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
     </head>
     <body>
-        <div class="col-md-6 col-md-offset-3">
-            <h4>Exercício 01</h4>
-            <p>Crie uma página HTML5 que possua um formulário. Este formulário deve permitir a entrada de dois
-        números positivos e um botão para executar um programa Javascript.</p>
-            <p>O programa deve receber dois valores inteiros positivos e calcular e escrever o MDC (Máximo Divisor Comum) pelo método de Euclides.</p>
-            <p>O método de Euclides considera um número como dividendo e o outro como divisor (o dividendo é o maior dos dois números), calculando o resto da divisão. Caso o resto seja zero, o MDC é o próprio divisor, senão o dividendo do próximo ciclo é o divisor do ciclo anterior e o divisor é o resto e o ciclo é repetido. Exemplo para os números 750 e 210; o MDC para esses números é 30:</p>
-        </div>
-        <div class="col-md-4 col-md-offset-4">
-            <table class="table table-striped table-bordered">
-                <thead>
-                    <tr>
-                        <th>dividendo</th>
-                        <th>divisor</th>
-                        <th>resto</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>750</td>
-                        <td>210</td>
-                        <td>120</td>
-                    </tr>
-                    <tr>
-                        <td>210</td>
-                        <td>120</td>
-                        <td>90</td>
-                    </tr>
-                    <tr>
-                        <td>120</td>
-                        <td>90</td>
-                        <td>30</td>
-                    </tr>
-                    <tr>
-                        <td>90</td>
-                        <td>30</td>
-                        <td>0</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="col-md-4 col-md-offset-4">
-            <form method="POST">
-                <div class="form-group">
-                    <div class="form-group col-md-5">
-                        <input type="number" name="primeiro_numero" id="id_primeiro_numero" class="form-control" required></input>
+        <div class="container">
+            <nav class="navbar navbar-inverse">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=  "  #bs  -example-navbar-collapse-9" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="../index.html">Inicio</a>
                     </div>
-                    <div class="form-group col-md-5">
-                        <input type="number" name="segundo_numero" id="id_segundo_numero" class="form-control" required></input>
-                    </div>
-                    <div class="form-group col-md-2">
-                        <input type="submit" class="btn btn-primary" value="Calcular"></input>
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
+                        <ul class="nav navbar-nav">
+                            <ul class="nav navbar-nav">
+                                <li class="active"><a href="exercicio-1.html">Exercício 1</a></li>
+                                <li><a href="../exercicio-2/exercicio-2.html">Exercício 2</a></li>
+                                <li><a href="../exercicio-3/exercicio-3.html">Exercício 3</a></li>
+                                <li><a href="../exercicio-4/exercicio-4.html">Exercício 4</a></li>
+                                <li><a href="../exercicio-5/exercicio-5.html">Exercício 5</a></li>
+                            </ul>
+                        </ul>
                     </div>
                 </div>
-            </form>
+            </nav>
+
+            <div class="col-md-6 col-md-offset-3">
+                <h4>Exercício 01</h4>
+                <p>Crie uma página HTML5 que possua um formulário. Este formulário deve permitir a entrada de dois
+            números positivos e um botão para executar um programa Javascript.</p>
+                <p>O programa deve receber dois valores inteiros positivos e calcular e escrever o MDC (Máximo Divisor Comum) pelo método de Euclides.</p>
+                <p>O método de Euclides considera um número como dividendo e o outro como divisor (o dividendo é o maior dos dois números), calculando o resto da divisão. Caso o resto seja zero, o MDC é o próprio divisor, senão o dividendo do próximo ciclo é o divisor do ciclo anterior e o divisor é o resto e o ciclo é repetido. Exemplo para os números 750 e 210; o MDC para esses números é 30:</p>
+            </div>
+            <div class="col-md-4 col-md-offset-4">
+                <table class="table table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>dividendo</th>
+                            <th>divisor</th>
+                            <th>resto</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>750</td>
+                            <td>210</td>
+                            <td>120</td>
+                        </tr>
+                        <tr>
+                            <td>210</td>
+                            <td>120</td>
+                            <td>90</td>
+                        </tr>
+                        <tr>
+                            <td>120</td>
+                            <td>90</td>
+                            <td>30</td>
+                        </tr>
+                        <tr>
+                            <td>90</td>
+                            <td>30</td>
+                            <td>0</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-md-4 col-md-offset-4">
+                <form method="POST">
+                    <div class="form-group">
+                        <div class="form-group col-md-5">
+                            <input type="number" name="primeiro_numero" id="id_primeiro_numero" class="form-control" required></input>
+                        </div>
+                        <div class="form-group col-md-5">
+                            <input type="number" name="segundo_numero" id="id_segundo_numero" class="form-control" required></input>
+                        </div>
+                        <div class="form-group col-md-2">
+                            <input type="submit" class="btn btn-primary" value="Calcular"></input>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
 
-        <script type="text/javascript" src="js/jquery.min.js"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/calculo.js"></script>
+        <script type="text/javascript" src="../static/js/jquery.min.js"></script>
+        <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="../static/js/exercicio-1.js"></script>
     </body>
 </html>
