--- a/aula-07/exercicios/exercicio-2/exercicio-2.html
+++ b/aula-07/exercicios/exercicio-2/exercicio-2.html
@@ -3,69 +3,94 @@
     <head>
         <meta charset="utf-8">
         <title>Exercício 02</title>
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
     </head>
     <body>
-        <div class="col-md-6 col-md-offset-3">
-            <h4>Exercício 02</h4>
-            <p>Uma aplicação financeira paga uma porcentagem de juros ao mês (por exemplo, 5%). O aplicador retira (saca) um determinado valor mensal (por exemplo, R$ 200,00). Escreva um programa em Javascript que leia as seguintes informações de uma página HTML5:</p>
-            <ul>
-                <li>Saldo inicial da aplicação financeira;</li>
-                <li>Porcentagem de juros pagas ao mês;</li>
-                <li>Retirada mensal.</li>
-            </ul>
-            <p>O seu programa deve calcular e mostrar na página HTML5 (em uma tabela), em quantos meses o saldo
-será insuficiente para sacar o valor e qual é este saldo. Veja o exemplo abaixo:</p>
-            <p><strong>Saldo inicial:</strong> R$ 800,00</p>
-            <p><strong>Porcentagem de juros:</strong> 5%</p>
-            <p><strong>Saque mensal:</strong> R$ 200,00</p>
-        </div>
-        <div class="col-md-4 col-md-offset-4">
-            <table class="table table-striped table-bordered">
-                <thead>
-                    <tr>
-                        <th>Mês</th>
-                        <th>Saldo + %</th>
-                        <th>Saque</th>
-                        <th>Saldo</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>0</td>
-                        <td>840,00</td>
-                        <td>200,00</td>
-                        <td>640,00</td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>672,00</td>
-                        <td>200,00</td>
-                        <td>472,00</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>496,60</td>
-                        <td>200,00</td>
-                        <td>295,60</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>310,00</td>
-                        <td>200,00</td>
-                        <td>110,38</td>
-                    </tr>
-                </tbody>
-            </table>
-            <p>Uma tabela, semelhante à acima, deverá ser exibida.</p>
-            <p><strong>Atenção:</strong> Dependendo do valor inicial aplicado, o saldo pode não diminuir, identificar e mostrar mensagem.</p>
-        </div>
-        <div class="col-md-4 col-md-offset-4">
-            <form method="POST">
+        <div class="container">
+            <nav class="navbar navbar-inverse">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=  "  #bs  -example-navbar-collapse-9" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="../index.html">Inicio</a>
+                    </div>
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
+                        <ul class="nav navbar-nav">
+                            <ul class="nav navbar-nav">
+                                <li><a href="../exercicio-1/exercicio-1.html">Exercício 1</a></li>
+                                <li class="active"><a href="exercicio-2.html">Exercício 2</a></li>
+                                <li><a href="../exercicio-3/exercicio-3.html">Exercício 3</a></li>
+                                <li><a href="../exercicio-4/exercicio-4.html">Exercício 4</a></li>
+                                <li><a href="../exercicio-5/exercicio-5.html">Exercício 5</a></li>
+                            </ul>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+
+            <div class="col-md-6 col-md-offset-3">
+                <h4>Exercício 02</h4>
+                <p>Uma aplicação financeira paga uma porcentagem de juros ao mês (por exemplo, 5%). O aplicador retira (saca) um determinado valor mensal (por exemplo, R$ 200,00). Escreva um programa em Javascript que leia as seguintes informações de uma página HTML5:</p>
+                <ul>
+                    <li>Saldo inicial da aplicação financeira;</li>
+                    <li>Porcentagem de juros pagas ao mês;</li>
+                    <li>Retirada mensal.</li>
+                </ul>
+                <p>O seu programa deve calcular e mostrar na página HTML5 (em uma tabela), em quantos meses o saldo
+    será insuficiente para sacar o valor e qual é este saldo. Veja o exemplo abaixo:</p>
+                <p><strong>Saldo inicial:</strong> R$ 800,00</p>
+                <p><strong>Porcentagem de juros:</strong> 5%</p>
+                <p><strong>Saque mensal:</strong> R$ 200,00</p>
+            </div>
+            <div class="col-md-4 col-md-offset-4">
+                <table class="table table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Mês</th>
+                            <th>Saldo + %</th>
+                            <th>Saque</th>
+                            <th>Saldo</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>0</td>
+                            <td>840,00</td>
+                            <td>200,00</td>
+                            <td>640,00</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>672,00</td>
+                            <td>200,00</td>
+                            <td>472,00</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>496,60</td>
+                            <td>200,00</td>
+                            <td>295,60</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>310,00</td>
+                            <td>200,00</td>
+                            <td>110,38</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <p>Uma tabela, semelhante à acima, deverá ser exibida.</p>
+                <p><strong>Atenção:</strong> Dependendo do valor inicial aplicado, o saldo pode não diminuir, identificar e mostrar mensagem.</p>
+            </div>
+            <div class="col-md-4 col-md-offset-4">
                 <div class="form-group">
                     <div class="form-group col-md-5">
                         <label>Saldo</label>
-                        <input type="number" step="0.01" name="saldo" id="id_saldo" class="money form-control" required autofocus></input>
+                        <input type="number" step="0.01" name="saldo" id="id_saldo" class="money form-control" required></input>
                     </div>
                     <div class="clearfix"></div>
                 </div>
@@ -88,12 +113,16 @@ será insuficiente para sacar o valor e qual é este saldo. Veja o exemplo abaix
                         <input type="submit" class="btn btn-primary" value="Calcular"></input>
                     </div>
                 </div>
-            </form>
+            </div>
+            <div class="col-md-4 col-md-offset-4" id="exibir-mensagem"></div>
+            <div class="col-md-4 col-md-offset-4">
+                <div class="alert alert-danger hidden" id="exibir-erro">Preencha todos os valores!</div>
+            </div>
         </div>
 
-        <script type="text/javascript" src="js/jquery.min.js"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/jquery.maskmoney.js"></script>
-        <script type="text/javascript" src="js/calculo.js"></script>
+        <script type="text/javascript" src="../static/js/jquery.min.js"></script>
+        <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="../static/js/jquery.maskmoney.js"></script>
+        <script type="text/javascript" src="../static/js/exercicio-2.js"></script>
     </body>
 </html>
