--- a/aula-07/exercicios/exercicio-3/exercicio-3.html
+++ b/aula-07/exercicios/exercicio-3/exercicio-3.html
@@ -3,22 +3,46 @@
     <head>
         <meta charset="utf-8">
         <title>Exercício 03</title>
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
     </head>
     <body>
-        <div class="col-md-6 col-md-offset-3">
-            <h4>Exercício 03</h4>
-            <p>Em um aviário, cada galinha coloca um ovo por mês e este ovo leva dois meses para se tornar uma galinha poedeira. A cada mês morrem 10% das galinhas.</p>
-            <p>Escreva um programa em Javascript que leia dois valores: a quantidade inicial de galinhas e a quantidade final de galinhas.</p>
-            <p>O programa deve calcular quantos meses serão necessários para que a quantidade final de galinhas seja alcançada. Escrever na tela (no HTML5), uma mensagem semelhante a esta: "A partir de XXX galinhas são necessários YYY meses para chegar a ZZZ galinhas."Exemplo: <strong>"A partir de 100 galinhas são necessários 8 meses para chegar a 230 galinhas."</strong></p>
-            <p>Exemplo: <strong>"A partir de 100 galinhas são necessários 8 meses para chegar a 230 galinhas."</strong></p>
-        </div>
-        <div class="col-md-6 col-md-offset-5">
-            <form method="POST">
+        <div class="container">
+            <nav class="navbar navbar-inverse">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=  "  #bs  -example-navbar-collapse-9" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="../index.html">Inicio</a>
+                    </div>
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
+                        <ul class="nav navbar-nav">
+                            <ul class="nav navbar-nav">
+                                <li><a href="../exercicio-1/exercicio-1.html">Exercício 1</a></li>
+                                <li><a href="../exercicio-2/exercicio-2.html">Exercício 2</a></li>
+                                <li class="active"><a href="exercicio-3.html">Exercício 3</a></li>
+                                <li><a href="../exercicio-4/exercicio-4.html">Exercício 4</a></li>
+                                <li><a href="../exercicio-5/exercicio-5.html">Exercício 5</a></li>
+                            </ul>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <div class="col-md-6 col-md-offset-3">
+                <h4>Exercício 03</h4>
+                <p>Em um aviário, cada galinha coloca um ovo por mês e este ovo leva dois meses para se tornar uma galinha poedeira. A cada mês morrem 10% das galinhas.</p>
+                <p>Escreva um programa em Javascript que leia dois valores: a quantidade inicial de galinhas e a quantidade final de galinhas.</p>
+                <p>O programa deve calcular quantos meses serão necessários para que a quantidade final de galinhas seja alcançada. Escrever na tela (no HTML5), uma mensagem semelhante a esta: "A partir de XXX galinhas são necessários YYY meses para chegar a ZZZ galinhas."Exemplo: <strong>"A partir de 100 galinhas são necessários 8 meses para chegar a 230 galinhas."</strong></p>
+                <p>Exemplo: <strong>"A partir de 100 galinhas são necessários 8 meses para chegar a 230 galinhas."</strong></p>
+            </div>
+            <div class="col-md-6 col-md-offset-5">
                 <div class="form-group">
                     <div class="form-group col-md-5">
                         <label>Quantidade Inicial de Galinhas</label>
-                        <input type="text" name="qnt_inicial_galinhas" id="id_qnt_inicial_galinhas" class="money form-control" required autofocus></input>
+                        <input type="text" name="qnt_inicial_galinhas" id="id_qnt_inicial_galinhas" class="money form-control" required></input>
                     </div>
                     <div class="clearfix"></div>
                 </div>
@@ -34,12 +58,18 @@
                         <input type="submit" class="btn btn-primary" value="Calcular"></input>
                     </div>
                 </div>
-            </form>
+            </div>
+            <div class="col-md-4 col-md-offset-4">
+                <div class="alert alert-info hidden" id="exibir-mensagem"></div>
+            </div>
+            <div class="col-md-4 col-md-offset-4">
+                <div class="alert alert-danger hidden" id="exibir-erro">Preencha todos os valores!</div>
+            </div>
         </div>
 
-        <script type="text/javascript" src="js/jquery.min.js"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/jquery.maskmoney.js"></script>
-        <script type="text/javascript" src="js/calculo.js"></script>
+        <script type="text/javascript" src="../static/js/jquery.min.js"></script>
+        <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="../static/js/jquery.maskmoney.js"></script>
+        <script type="text/javascript" src="../static/js/exercicio-3.js"></script>
     </body>
 </html>
