--- a/aula-07/exercicios/exercicio-2/exercicio-2.html
+++ b/aula-07/exercicios/exercicio-2/exercicio-2.html
@@ -32,7 +32,7 @@
                 </div>
             </nav>
 
-            <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-12">
                 <h4>Exercício 02</h4>
                 <p>Uma aplicação financeira paga uma porcentagem de juros ao mês (por exemplo, 5%). O aplicador retira (saca) um determinado valor mensal (por exemplo, R$ 200,00). Escreva um programa em Javascript que leia as seguintes informações de uma página HTML5:</p>
                 <ul>
@@ -46,7 +46,7 @@
                 <p><strong>Porcentagem de juros:</strong> 5%</p>
                 <p><strong>Saque mensal:</strong> R$ 200,00</p>
             </div>
-            <div class="col-md-4 col-md-offset-4">
+            <div class="col-md-6 col-md-offset-3">
                 <table class="table table-striped table-bordered">
                     <thead>
                         <tr>
@@ -83,26 +83,32 @@
                         </tr>
                     </tbody>
                 </table>
+            </div>
+            <div class="col-md-12">
                 <p>Uma tabela, semelhante à acima, deverá ser exibida.</p>
                 <p><strong>Atenção:</strong> Dependendo do valor inicial aplicado, o saldo pode não diminuir, identificar e mostrar mensagem.</p>
             </div>
-            <div class="col-md-4 col-md-offset-4">
+            <div class="col-md-6 col-md-offset-3">
+                <div class="alert alert-danger hidden" id="exibir-erro">Preencha todos os valores!</div>
+            </div>
+            <div class="col-md-6 col-md-offset-3" id="exibir-mensagem"></div>
+            <div class="col-md-6 col-md-offset-3">
                 <div class="form-group">
-                    <div class="form-group col-md-5">
+                    <div class="form-group">
                         <label>Saldo</label>
                         <input type="number" step="0.01" name="saldo" id="id_saldo" class="money form-control" required></input>
                     </div>
                     <div class="clearfix"></div>
                 </div>
                 <div class="form-group">
-                    <div class="form-group col-md-5">
+                    <div class="form-group">
                         <label>Porcentagem de Juros</label>
                         <input type="number" step="0.01" name="juro" id="id_juro" class="money form-control" required></input>
                     </div>
                     <div class="clearfix"></div>
                 </div>
                 <div class="form-group">
-                    <div class="form-group col-md-5">
+                    <div class="form-group">
                         <label>Retirada mensal</label>
                         <input type="number" step="0.01" name="saque" id="id_saque" class="money form-control" required></input>
                     </div>
@@ -113,10 +119,6 @@
                         <input type="submit" class="btn btn-primary" value="Calcular"></input>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4 col-md-offset-4" id="exibir-mensagem"></div>
-            <div class="col-md-4 col-md-offset-4">
-                <div class="alert alert-danger hidden" id="exibir-erro">Preencha todos os valores!</div>
             </div>
         </div>
 
