--- a/aula-07/exercicios/exercicio-1/exercicio-1.html
+++ b/aula-07/exercicios/exercicio-1/exercicio-1.html
@@ -73,7 +73,7 @@
                 </table>
             </div>
             <div class="col-md-6 col-md-offset-3">
-                <div class="alert alert-danger hidden" id="exibir-erro">Informe todos os valores!</div>
+                <div class="alert alert-danger hidden" id="exibir-erro">Informe todos os valores maiores que Zero!</div>
             </div>
             <div class="col-md-6 col-md-offset-3">
                 <div class="alert alert-info hidden" id="exibir-mensagem"></div>
@@ -81,10 +81,10 @@
             <div class="col-md-6 col-md-offset-3">
                 <div class="form-group">
                     <div class="form-group col-md-5">
-                        <input type="number" name="primeiro_numero" id="id_primeiro_numero" class="form-control" required></input>
+                        <input type="number" name="primeiro_numero" id="id_primeiro_numero" class="form-control" value="0"></input>
                     </div>
                     <div class="form-group col-md-5">
-                        <input type="number" name="segundo_numero" id="id_segundo_numero" class="form-control" required></input>
+                        <input type="number" name="segundo_numero" id="id_segundo_numero" class="form-control" value="0"></input>
                     </div>
                     <div class="form-group col-md-2">
                         <input type="submit" class="btn btn-primary" value="Calcular"></input>
