--- a/aula-07/exercicios/exercicio-4/exercicio-4.html
+++ b/aula-07/exercicios/exercicio-4/exercicio-4.html
@@ -31,7 +31,7 @@
                     </div>
                 </div>
             </nav>
-            <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-12">
                 <h4>Exercício 04</h4>
                 <p>Escrever uma página em HTML5 que possua um campo onde o usuário pode digitar uma data no formato DD/MM/AAAA.</p>
                 <p>Esta página deve ter um botão que, quando clicado, escreve a data por extenso.</p>
@@ -39,22 +39,22 @@
                 <p>Foi digitado: 16/09/2015</p>
                 <p>Será apresentado: 18 de Setembro de 2015.</p>
             </div>
-            <div class="col-md-4 col-md-offset-4">
+            <div class="col-md-6 col-md-offset-3">
                 <div class="alert alert-danger hidden" id="exibir-erro">Informe uma data!</div>
             </div>
-            <div class="col-md-4 col-md-offset-4">
+            <div class="col-md-6 col-md-offset-3">
                 <div class="alert alert-info hidden" id="exibir-mensagem"></div>
             </div>
-            <div class="col-md-6 col-md-offset-5">
+            <div class="col-md-6 col-md-offset-3">
                 <div class="form-group">
-                    <div class="form-group col-md-5">
+                    <div class="form-group">
                         <label>Informe a data</label>
                         <input type="date" name="data_informada" id="id_data_informada" class="form-control" required autofocus></input>
                     </div>
                     <div class="clearfix"></div>
                 </div>
                 <div class="form-group">
-                    <div class="form-group col-md-2">
+                    <div class="form-group">
                         <input type="submit" class="btn btn-primary" value="Exibir data por extenso"></input>
                     </div>
                 </div>
