--- a/aula-07/exercicios/exercicio-5/exercicio-5.html
+++ b/aula-07/exercicios/exercicio-5/exercicio-5.html
@@ -31,7 +31,7 @@
                     </div>
                 </div>
             </nav>
-            <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-12">
                 <h4>Exercício 05</h4>
                 <p>Escrever uma página em HTML5 que possua um campo onde o usuário pode digitar um valor.</p>
                 <p>Esta página deve ter um botão que, quando clicado, escreve este valor por extenso.</p>
@@ -59,7 +59,7 @@
                     <div class="clearfix"></div>
                 </div>
                 <div class="form-group">
-                    <div class="form-group col-md-2">
+                    <div class="form-group">
                         <input type="submit" class="btn btn-primary" value="Exibir data por extenso"></input>
                     </div>
                 </div>
